/* Accessibility hint */
"ANNOTATION_A11Y_HINT" = "Shows more info";

/* Title of button for dismissing attribution action sheet */
"CANCEL" = "Cancel";

/* Accessibility hint for closing the selected annotation’s callout view and returning to the map */
"CLOSE_CALLOUT_A11Y_HINT" = "Returns to the map";

/* Accessibility hint */
"COMPASS_A11Y_HINT" = "Rotates the map to face due north";

/* Accessibility label */
"COMPASS_A11Y_LABEL" = "Compass";

/* Compass abbreviation for north */
"COMPASS_NORTH" = "N";

/* Instructions in Interface Builder designable; {key}, {plist file name} */
"DESIGNABLE" = "To display a Mapbox-hosted map here, set %1$@ to your access token in %2$@\n\nFor detailed instructions, see:";

/* Setup documentation URL display string; keep as short as possible */
"FIRST_STEPS_URL" = "docs.mapbox.com/help/tutorials/first-steps-ios-sdk";

/* Accessibility hint */
"INFO_A11Y_HINT" = "Shows credits, a feedback form, and more";

/* Accessibility label */
"INFO_A11Y_LABEL" = "About this map";

/* List separator */
"LIST_SEPARATOR" = ", ";

/* User-friendly error description */
"LOAD_MAP_FAILED_DESC" = "The map failed to load because an unknown error occurred.";

/* User-friendly error description */
"LOAD_STYLE_FAILED_DESC" = "The map failed to load because the style can't be loaded.";

/* Accessibility label */
"LOGO_A11Y_LABEL" = "Mapbox";

/* Accessibility label */
"MAP_A11Y_LABEL" = "Map";

/* Map accessibility value; {number of visible annotations} */
"MAP_A11Y_VALUE_ANNOTATIONS" = "%ld annotation(s) visible.";

/* Map accessibility value; {list of visible places} */
"MAP_A11Y_VALUE_PLACES" = "Places visible: %@.";

/* Map accessibility value; {number of visible roads} */
"MAP_A11Y_VALUE_ROADS" = "%ld road(s) visible.";

/* Map accessibility value; {zoom level} */
"MAP_A11Y_VALUE_ZOOM" = "Zoom %dx.";

/* User-friendly error description */
"PARSE_STYLE_FAILED_DESC" = "The map failed to load because the style is corrupted.";

/* String format for accessibility value for road feature; {starting compass direction}, {ending compass direction} */
"ROAD_DIRECTION_A11Y_FMT" = "%1$@ to %2$@";

/* Accessibility value indicating that a road is a divided road (dual carriageway) */
"ROAD_DIVIDED_A11Y_VALUE" = "Divided road";

/* Accessibility value indicating that a road is a one-way road */
"ROAD_ONEWAY_A11Y_VALUE" = "One way";

/* String format for accessibility value for road feature; {route number} */
"ROAD_REF_A11Y_FMT" = "Route %@";

/* Action sheet title */
"SDK_NAME" = "Mapbox Maps SDK for iOS";

/* Developer-only SDK update notification; {latest version, in format x.x.x} */
"SDK_UPDATE_AVAILABLE" = "Mapbox Maps SDK for iOS version %@ is now available:";

/* User-friendly error description */
"STYLE_NOT_FOUND_DESC" = "The map failed to load because the style can’t be found or is incompatible.";

/* Telemetry prompt message */
"TELEMETRY_DISABLED_MSG" = "You can help make OpenStreetMap and Mapbox maps better by contributing anonymous usage data.";

/* Telemetry prompt button */
"TELEMETRY_DISABLED_OFF" = "Don’t Participate";

/* Telemetry prompt button */
"TELEMETRY_DISABLED_ON" = "Participate";

/* Telemetry prompt message */
"TELEMETRY_ENABLED_MSG" = "You are helping to make OpenStreetMap and Mapbox maps better by contributing anonymous usage data.";

/* Telemetry prompt button */
"TELEMETRY_ENABLED_OFF" = "Stop Participating";

/* Telemetry prompt button */
"TELEMETRY_ENABLED_ON" = "Keep Participating";

/* Telemetry prompt button */
"TELEMETRY_MORE" = "Tell Me More";

/* Action in attribution sheet */
"TELEMETRY_NAME" = "Mapbox Telemetry";

/* Telemetry prompt title */
"TELEMETRY_TITLE" = "Make Mapbox Maps Better";

/* Default user location annotation title */
"USER_DOT_TITLE" = "You Are Here";

