...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3pC-z4-awr" customClass="MGLMapView">
                                <rect key="frame" x="110" y="68" width="1700" height="944"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <gestureRecognizers/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="R5G-s2-6ua"/>
                                    <outletCollection property="gestureRecognizers" destination="NIw-pr-3Xt" appends="YES" id="WYu-GK-C9r"/>
...
